Fixing defines for NEON intrinsics. https://bugs.webkit.org/show_bug.cgi?id=90666

Reviewed by Zoltan Herczeg.

Existing tests cover this issue.

* platform/graphics/filters/FEGaussianBlur.cpp:
(WebCore::FEGaussianBlur::platformApplyGeneric):
* platform/graphics/filters/arm/FEGaussianBlurNEON.h:
* platform/graphics/filters/arm/NEONHelpers.h:



Canonical link: https://commits.webkit.org/108509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121951 268f45cc-cd09-0410-ab3c-d52691b4dbfc