Source/WebCore/platform/graphics/filters/FEGaussianBlur.cpp
@@ -120,7 +120,7 @@ inline void FEGaussianBlur::platformApplyGeneric(Uint8ClampedArray* srcPixelArra
     for (int i = 0; i < 3; ++i) {
         if (kernelSizeX) {
             kernelPosition(i, kernelSizeX, dxLeft, dxRight);
-#if CPU(ARM_NEON) && COMPILER(GCC)
+#if HAVE(ARM_NEON_INTRINSICS)
             if (!isAlphaImage())
                 boxBlurNEON(src, dst, kernelSizeX, dxLeft, dxRight, 4, stride, paintSize.width(), paintSize.height());
             else
@@ -133,7 +133,7 @@ inline void FEGaussianBlur::platformApplyGeneric(Uint8ClampedArray* srcPixelArra
 
         if (kernelSizeY) {
             kernelPosition(i, kernelSizeY, dyLeft, dyRight);
-#if CPU(ARM_NEON) && COMPILER(GCC)
+#if HAVE(ARM_NEON_INTRINSICS)
             if (!isAlphaImage())
                 boxBlurNEON(src, dst, kernelSizeY, dyLeft, dyRight, stride, 4, paintSize.height(), paintSize.width());
             else
